--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PORT=3005
 DB_CNN=mongodb+srv://gvidal:gvidal123@cluster0-et3nb.mongodb.net/hospitaldb
 JWT_SECRET="SEED@SECRET123WWW***-"
+
+GOOGLE_ID=170930899670-eqf6q4u8oae3c1ese13r881tf5us1d4l.apps.googleusercontent.com
+GOOGLE_SECRET=K7F5BZlLyEa02jD4_LsrS4i7
